--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/opbr-meddlr/medFavicon.svg" />
+      <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/medFavicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meddlr</title>
+    <link rel="mask-icon" href="/mask-icon.svg" color="#B43F3F">
+    <meta name="theme-color" content="#173B45">
   </head>
   <body>
     <div id="root">A tool to create and manage medal sets for the game One Piece Bounty Rush</div>
